test/config-sample.yaml
logging:
  level: debug
redis:
  address: localhost:6379
api_key: your-api-key
api_secret: your-api-secret
ws_url: wss://your-livekit-url.com
room_name: ingress-test
enable_stream_latency_reduction: true
