test/tsconfig.json
{
  "compilerOptions": {
    "target": "es2015",
    "module": "commonjs",
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "noImplicitAny": true,
    "removeComments": true
  },
  "include": [
    "../src/**/*",
    "../test/**/*",
    "../node_modules/@types/**/*"
  ]
}
